typo revision for A03.md

--- a/A04.md
+++ b/A04.md
@@ -84,7 +84,7 @@
  
  ![](images/A04-15.jpg)
  
- 2011 年初，正在研究比特币那会儿，中间专门写过一篇文章骂知乎，标题是《都不要脸的流氓都一个德行》…… 当然，后来我也转变了一些看法，再后来又认识了知乎的创始人；虽然这篇文章的内容至今我也不认为写错了，但这个过程其实让我对判断事物的方法论发生了很多次升级。2015 年 9 月底的时候，我写过一篇《[我如何看待知乎](http://t.cn/RGb8hPg)》，认真反思这事儿……
+ 2011 年初，正在研究比特币那会儿，中间专门写过一篇文章骂知乎，标题是《臭不要脸的流氓都一个德行》…… 当然，后来我也转变了一些看法，再后来又认识了知乎的创始人；虽然这篇文章的内容至今我也不认为写错了，但这个过程其实让我对判断事物的方法论发生了很多次升级。2015 年 9 月底的时候，我写过一篇《[我如何看待知乎](http://t.cn/RGb8hPg)》，认真反思这事儿……
  
  ![](images/A04-16.jpg)
  
@@ -92,7 +92,7 @@
  
  ![](images/A04-17.jpg)
  
- 到了 2011 年 7 月份，我那宏伟的挖矿计划惨败，具体原因就不说了罢。然后有天躺在床上发呆，突然坐起来，想起来九城的钱庚（网名布布）在张江的星巴克跟我聊天的时候说过，“金融的世界里当然是钱最厉害，所以，挖矿肯定不如直接卖币……” 我当时还赞同来着，怎么后来就好像完全不存在那段对话一样，把币卖掉了大部分去挖矿呢？！好蠢、好蠢、好蠢[^3]…… 然后此后的一年里，我大量买卖比特币，后来么，你懂的，那是多么愚蠢之后多么英明的决定。
+ 到了 2011 年 7 月份，我那宏伟的挖矿计划惨败，具体原因就不说了罢。然后有天躺在床上发呆，突然坐起来，想起来九城的钱庚（网名布布）在张江的星巴克跟我聊天的时候说过，“金融的世界里当然是钱最厉害，所以，挖矿肯定不如直接买币……” 我当时还赞同来着，怎么后来就好像完全不存在那段对话一样，把币卖掉了大部分去挖矿呢？！好蠢、好蠢、好蠢[^3]…… 然后此后的一年里，我大量买卖比特币，后来么，你懂的，那是多么愚蠢之后多么英明的决定。
  
  ![](images/A04-18.jpg)
  
