--- a/A03.md
+++ b/A03.md
@@ -8,7 +8,7 @@
  
  上学的时候，我的书看起来一直都是新的，因为我习惯了[开学拿回来新书之后，先把每一章的概念囫囵吞枣地死记硬背下来，而后就把书扔在那里，偶尔听听课，偶尔跟着做做题就完事儿了](A10.md) —— 如此看来，学校实在是太好混了。那时候，我看同学们拿回新书第一件事儿是给它包个书皮就觉得好笑，也很自得，因为觉得自己暗藏了一门保护书籍的秘籍。
  
- 可这一次我实在忍不住了，看着那几个数字就觉得神奇，忍不住一定要搞明白整个计算过程；几天时间不知不觉就一晃而过，我已经把整本书彻底翻完。那应该是我人生第一次“高速学习”的经历，虽然囫囵吞枣，但也感觉一路披荆斩棘。这次的学习过程成就感太强 —— 恍然间觉得自己的“保护书籍”的方法论，其实一直一来就使得我的学习速度超越了“第一宇宙速度”，而这一次的高密度学习过程，让我感受到了“逃逸速度”……
+ 可这一次我实在忍不住了，看着那几个数字就觉得神奇，忍不住一定要搞明白整个计算过程；几天时间不知不觉就一晃而过，我已经把整本书彻底翻完。那应该是我人生第一次“高速学习”的经历，虽然囫囵吞枣，但也感觉一路披荆斩棘。这次的学习过程成就感太强 —— 恍然间觉得自己的“保护书籍”的方法论，其实一直以来就使得我的学习速度超越了“第一宇宙速度”，而这一次的高密度学习过程，让我感受到了“逃逸速度”……
  
  那时候，小朋友们还不知道有“脑洞大开”这么个说法，身边真的没有谁可以交流这个神奇的过程与奇妙的感受。尝试着跟同桌说了一回，发现再说下去有被仇恨的危险，于是就闭嘴了。
  
@@ -22,7 +22,7 @@
  
  虽然这个类比倒是不错，可实际上，赚钱速度要多快才能达到“第二宇宙速度”是没办法像物理书里那样有公式可以计算出来的。而且，事实上，财务上的“重力加速度”远远超出一个年轻人的想象。
  
- 一九九七年前后的时候，我已经赚到百万级别的现金 —— 那时候我已经是金鹰板卡的东北区总代…… 可一场突如其来的事件，在接下来的两三年里，让我的积蓄迅速归零 —— 我父亲病倒了。这个过程中，我对医疗商业化这个政策有了深刻的理解，也见证了很多人真的在生了病之后因为没钱治疗而不得不回家等死…… 到了二〇〇〇年前后，我已经彻底“青皮”（东北话，一无所有、身无分文的意思），于是只好想办法去找一份高收入切稳定的“工作” —— 后来去了新东方呆了七年，那是我人生中唯一一次打工的经历。
+ 一九九七年前后的时候，我已经赚到百万级别的现金 —— 那时候我已经是金鹰板卡的东北区总代…… 可一场突如其来的事件，在接下来的两三年里，让我的积蓄迅速归零 —— 我父亲病倒了。这个过程中，我对医疗商业化这个政策有了深刻的理解，也见证了很多人真的在生了病之后因为没钱治疗而不得不回家等死…… 到了二〇〇〇年前后，我已经彻底“青皮”（东北话，一无所有、身无分文的意思），于是只好想办法去找一份高收入切且稳定的“工作” —— 后来去了新东方呆了七年，那是我人生中唯一一次打工的经历。
  
  其实，在一九九五年的时候，我遇到过另一场“灾难” —— 我们几个朋友在华正经营服装批发赚来的钱“消失”了。因为是坏事儿且涉及到朋友，这事儿即便是在今天，我也不愿意公开说出细节，反正结果就是十来万块钱消失了…… 一年多白干。不仅白干，还有负债。这直接导致了大学毕业之后的我不可能去“找个工作”。那时候在银行工作，每个月的工资也不过几百块钱，靠那点薪水，我一辈子都别想还清债务。压力是可以转换为动力的，没有这些压力，我可能真的去找工作了，可有了这种压力，找工作是不可能的，于是我只好想办法去做生意 —— 那时候人们不用“创业”这个词 —— 辗转了几下，跑去沈阳的三好街，从卖光盘开始……
  
